--- a/main.html
+++ b/main.html
@@ -2,3 +2,15 @@
   PASTE NYO DITO UNG CODE NG HTML
   GAWIN NYO NALANG HOMEPAGE TO
 -->
+
+
+<!DOCTYPE HTML>
+<html>
+  <head>
+    
+  </head>
+
+  <body>
+    
+  </body>
+</html>
