Update image paths to use frontend directory

--- a/frontend/webdevprelim.html
+++ b/frontend/webdevprelim.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbarcol">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/img/glowinglogoname.png" alt="Logo" class="d-inline-block align-text-top homeimage">
+                    <img src="/frontend/img/glowinglogoname.png" alt="Logo" class="d-inline-block align-text-top homeimage">
                 </a>
             </div>
         </nav>
@@ -31,17 +31,17 @@
 
             <div class="carousel-inner carus">
                 <div class="carousel-item active">
-                    <img src="/img/hero-g1-frostpunk-2-icebreaker-ed.webp" class="d-block w-100 carus img-fluid"
+                    <img src="/frontend/img/hero-g1-frostpunk-2-icebreaker-ed.webp" class="d-block w-100 carus img-fluid"
                         alt="...">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="/img/PC_BUILD-SLIDING_BANNER_ECOM_47_1800xmain_1600x.webp"
+                    <img src="/frontend/img/PC_BUILD-SLIDING_BANNER_ECOM_47_1800xmain_1600x.webp"
                         class="d-block w-100 carus img-fluid" alt="...">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="/img/Resident-Evil-Generation_SLIDING-BANNER-ECOM---2_51c6f396-66be-4aae-9646-c2d24bfc393e_1600x.webp"
+                    <img src="/frontend/img/Resident-Evil-Generation_SLIDING-BANNER-ECOM---2_51c6f396-66be-4aae-9646-c2d24bfc393e_1600x.webp"
                         class="d-block w-100 carus img-fluid" alt="...">
                 </div>
             </div>
@@ -130,7 +130,7 @@
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            <img src="/img/glowinglogoname.png" class="img-fluid" alt="Responsive image">
+                            <img src="/frontend/img/glowinglogoname.png" class="img-fluid" alt="Responsive image">
                             <p>
                                 Building a gaming PC requires careful consideration of various components to ensure
                                 optimal
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top text-center" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top text-center" alt="...">
                         <div class="card-body cards">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -180,7 +180,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -192,7 +192,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -206,7 +206,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top text-center" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top text-center" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -218,7 +218,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -230,7 +230,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -242,7 +242,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
