--- a/frontend/webdevprelim.html
+++ b/frontend/webdevprelim.html
@@ -168,7 +168,7 @@
 
                 <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-3 container-fluid">
                     <div class="card" style="width: 20rem;">
-                        <img src="/img/mouse1.webp" class="card-img-top" alt="...">
+                        <img src="/frontend/img/mouse1.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
