--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <h1>Testing if Mag Reflect</h1>
     <h2>Hellow</h2>
     <h2><a href="/frontend/webdevprelim.html">Web Dev - Prelim</a></h2>
+
+    <h1>Nakasali na si thirdy</h1>
+    <h1>Pati si ivan</h1>
   </body>
 </html>
