--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 
     <h1>Nakasali na si thirdy</h1>
     <h1>Pati si ivan</h1>
+    <p>malake tong akin</p>
+    <h1>malake nga</h1>
   </body>
 </html>
