--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1>Testing if Mag Reflect</h1>
     <h2>Hellow</h2>
     <h2><a href="/frontend/webdevprelim.html">Web Dev - Prelim</a></h2>
+    <a href="homepage.html">Homepage</a>
 
     <h1>Nakasali na si thirdy</h1>
     <h1>Pati si ivan</h1>
