--- a/ADMIN/REPORTS/index.html
+++ b/ADMIN/REPORTS/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Report - Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../STYLES/sidebar.css">
   </head>
   <body>
-    <div id="sidebar-placeholder"></div>
+    <nav class="sidebar" id="sidebar">
+      <div class="px-3">
+        <ul class="nav nav-pills flex-column" id="sidebarMenu">
+          <li class="nav-item"><a class="nav-link" href="../dashboard.html">        DASHBOARD   </a></li>
+          <li class="nav-item"><a class="nav-link" href="../PROFILE/index.html">    PROFILE     </a></li>
+          <li class="nav-item"><a class="nav-link" href="../ACCOUNTS/index.html">   ACCOUNTS    </a></li>
+          <li class="nav-item"><a class="nav-link" href="../CALENDAR/index.html">   CALENDAR    </a></li>
+          <li class="nav-item"><a class="nav-link" href="../SERVICES/index.html">   SERVICES    </a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">               REPORTS     </a></li>
+        </ul>
+      </div>
+    </nav>
     <nav class="navbar navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="../dashboard.html">Admin Dashboard</a>
@@ -19,7 +30,6 @@
       <p>This is the report page.</p>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../include-sidebar-clean.js" defer></script>
     <script src="script.js"></script>
   </body>
 </html>
