--- a/ADMIN/dashboard.html
+++ b/ADMIN/dashboard.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Admin Dashboard</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="admin-dashboard.css">
+		<link rel="stylesheet" href="../STYLES/sidebar.css">
 	</head>
 	<body>
 		<header class="topbar">
@@ -13,7 +13,19 @@
 			<h5 class="m-0">Admin Dashboard</h5>
 		</header>
 
-		<div id="sidebar-placeholder"></div>
+
+		   <nav class="sidebar" id="sidebar">
+			   <div class="px-3">
+				   <ul class="nav nav-pills flex-column" id="sidebarMenu">
+					 <li class="nav-item"><a class="nav-link" href="dashboard.html">        DASHBOARD   </a></li>
+					 <li class="nav-item"><a class="nav-link" href="PROFILE/index.html">    PROFILE     </a></li>
+					 <li class="nav-item"><a class="nav-link" href="ACCOUNTS/index.html">   ACCOUNTS    </a></li>
+					 <li class="nav-item"><a class="nav-link" href="CALENDAR/index.html">   CALENDAR    </a></li>
+					 <li class="nav-item"><a class="nav-link" href="SERVICES/index.html">   SERVICES    </a></li>
+					 <li class="nav-item"><a class="nav-link" href="REPORTS/index.html">    REPORTS     </a></li>
+				   </ul>
+			   </div>
+		   </nav>
 
 		<main class="main-content">
 			<div class="container-fluid">
@@ -25,7 +37,6 @@
 		</main>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="include-sidebar-clean.js" defer></script>
 		<script src="dashboard.js"></script>
 	</body>
 </html>
