--- a/ADMIN/SERVICES/index.html
+++ b/ADMIN/SERVICES/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Services - Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../STYLES/sidebar.css">
+    <link rel="stylesheet" href="../STYLES/sidebar.css">
+    <link rel="stylesheet" href="../STYLES/dashboard.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="sidebar" id="sidebar">
@@ -20,12 +24,8 @@
         </ul>
       </div>
     </nav>
-    <nav class="navbar navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="../dashboard.html">Admin Dashboard</a>
-      </div>
-    </nav>
-    <main class="container py-5">
+    <!-- Removed top navbar -->
+    <main class="container py-5 dashboard-header">
       <h1>Services</h1>
       <p>This is the services page.</p>
     </main>
