--- a/ADMIN/ACCOUNTS/index.html
+++ b/ADMIN/ACCOUNTS/index.html
@@ -25,9 +25,61 @@
       </div>
     </nav>
     <!-- Removed top navbar -->
-    <main class="container py-5 dashboard-header">
-      <h1>Accounts</h1>
-      <p>This is the accounts page.</p>
+    <main class="dashboard-main-content dashboard-header py-5">
+      <div class="container-fluid">
+        <h1>Accounts</h1><br>
+        <div class="table-responsive">
+          <table class="table table-bordered align-middle">
+            <thead class="table-light">
+              <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Middle Name</th>
+                <th>Last Name</th>
+                <th>Acc Type</th>
+                <th>Email</th>
+                <th>Username</th>
+                <th>Edit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Juan</td>
+                <td>Santos</td>
+                <td>Dela Cruz</td>
+                <td>Admin</td>
+                <td>juan@email.com</td>
+                <td>juandelacruz</td>
+                <td>
+                  <button type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
+                </td>
+              </tr>
+              <!-- Add more rows as needed -->
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Edit Modal -->
+        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="editModalLabel">Edit Account</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div id="successAlert" class="alert alert-success d-none" role="alert">
+                  Success!
+                </div>
+                <button class="btn btn-danger w-100 mb-2 action-btn" type="button">Delete Account</button>
+                <button class="btn btn-warning w-100 mb-2 action-btn" type="button">Reset Password</button>
+                <button class="btn btn-secondary w-100 action-btn" type="button">Reset Username</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
