--- a/ADMIN/dashboard.html
+++ b/ADMIN/dashboard.html
@@ -24,6 +24,7 @@
 					 <li class="nav-item"><a class="nav-link" href="CALENDAR/index.html">   CALENDAR    </a></li>
 					 <li class="nav-item"><a class="nav-link" href="SERVICES/index.html">   SERVICES    </a></li>
 					 <li class="nav-item"><a class="nav-link" href="REPORTS/index.html">    REPORTS     </a></li>
+					 <li class="nav-item mt-3"><a class="nav-link text-danger" href="logout.php">LOGOUT</a></li>
 				   </ul>
 			   </div>
 		   </nav>
@@ -37,7 +38,7 @@
 							   <!-- Left: Schedules (top) and Live Stream (bottom) -->
 							   <div class="d-flex flex-column dashboard-col-full dashboard-col-wide">
 								   <div class="dashboard-row-20">
-									   <div class="dashboard-box dashboard-schedules h-100">SCHEDULES</div>
+									<a href="SCHEDULES/index.html" class="dashboard-box dashboard-schedules h-100 text-decoration-none text-white">SCHEDULES</a>
 								   </div>
 								   <div class="dashboard-row-80">
 									   <div class="dashboard-box dashboard-livestream h-100">LIVE STREAM</div>
