--- a/ADMIN/CALENDAR/index.html
+++ b/ADMIN/CALENDAR/index.html
@@ -22,6 +22,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">               CALENDAR    </a></li>
           <li class="nav-item"><a class="nav-link" href="../SERVICES/index.html">   SERVICES    </a></li>
           <li class="nav-item"><a class="nav-link" href="../REPORTS/index.html">    REPORTS     </a></li>
+          <li class="nav-item mt-3"><a class="nav-link text-danger" href="../logout.php">LOGOUT</a></li>
         </ul>
       </div>
     </nav>
