--- a/ADMIN/REPORTS/index.html
+++ b/ADMIN/REPORTS/index.html
@@ -21,6 +21,7 @@
           <li class="nav-item"><a class="nav-link" href="../CALENDAR/index.html">   CALENDAR    </a></li>
           <li class="nav-item"><a class="nav-link" href="../SERVICES/index.html">   SERVICES    </a></li>
           <li class="nav-item"><a class="nav-link" href="index.html">               REPORTS     </a></li>
+          <li class="nav-item mt-3"><a class="nav-link text-danger" href="../logout.php">LOGOUT</a></li>
         </ul>
       </div>
     </nav>
