--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <h2>Hellow</h2>
     <h2><a href="/frontend/webdevprelim.html">Web Dev - Prelim</a></h2>
     <a href="homepage.html">Homepage</a>
+    <br>
+    <br>
+    <a href="index testing regis.html">Login</a>
 
     <h1>Nakasali na si thirdy</h1>
     <h1>Pati si ivan</h1>
