--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <h1>Testing if Mag Reflect</h1>
     <h2>Hellow</h2>
     <a href="homepage.html">Homepage</a>
-<<<<<<< HEAD
     <br>
     <br>
     <a href="index testing regis.html">Login</a>
+
+    <br>
+    <br>
+
+    <a href="my_auth/register.php">Register</a>
 
     <h1>Nakasali na si thirdy</h1>
     <h1>Pati si ivan</h1>
@@ -25,7 +29,6 @@
     <h1>malake nga</h1>
     <h1>isa pa</h1>
     <h1>Ivan bading</h1>
-=======
->>>>>>> 3acdf8bd1cb94453f6cd0a472501f8ebb16a367b
+
   </body>
 </html>
