--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,11 +20,11 @@
       <div class="col-12 col-md-6">
         <div class="card card-dark h-100">
           <div class="card-body">
-            <h3 class="card-title">Visualization</h3>
+            <h3 class="card-title text text-center">Visualization</h3>
             <p class="text-secondary">
-              Animated fall + bounce + live telemetry + pause/scrub time.
+              Animated fall + bounce + live calculation
             </p>
-            <a class="btn btn-primary w-100" href="./visualize.html">Open Visualization</a>
+            <a class="btn btn-primary w-100" href="./visualize.html?mode=2d">Open Visualization</a>
           </div>
         </div>
       </div>
@@ -32,9 +32,9 @@
       <div class="col-12 col-md-6">
         <div class="card card-dark h-100">
           <div class="card-body">
-            <h3 class="card-title">Graphs</h3>
+            <h3 class="card-title text text-center">Graphs</h3>
             <p class="text-secondary">
-              Height/velocity/energy vs time + time cursor + bounce list + CSV.
+              Height/velocity/energy vs time + graph
             </p>
             <a class="btn btn-outline-light w-100" href="./graph.html">Open Graphs</a>
           </div>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="mt-4 text-center text-secondary small">
-      Convention: positive direction is downward. Displacement shown as always positive.
+      <h1>Made by: John Elijah Cimafranca</h1>
     </div>
   </div>
 </body>
