--- a/graph.html
+++ b/graph.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +14,7 @@
     <div class="d-flex flex-wrap justify-content-between align-items-center gap-2 mb-3">
       <div>
         <h2 class="fw-bold mb-0">Graphs</h2>
-        <div class="text-secondary small">Charts + time cursor + bounce list + CSV export</div>
+        <div class="text-secondary small">Made by: John Elijah Cimafranca</div>
       </div>
       <a class="btn btn-outline-light" href="./index.html">Back</a>
     </div>
